mock gapi test
